--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,14 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CICD
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -26,11 +24,25 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: change directory
+        run: cd $GITHUB_WORKSPACE
+      - name: current direcotry
+        run: pwd  
+      
+      - name: Java version
+        run: java --version
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          ls
+
+          curl -fO https://repo.phdata.io/yDr95R4UUTucC9DR/toolkit-cli/maven/io/phdata/toolkit/toolkit-cli/0.23.1/toolkit-cli-0.23.1.zip
+          unzip toolkit-cli-0.23.1.zip
+          pwd
+          export PATH=$PATH:/home/runner/work/provision_tool_assignment/provision_tool_assignment/toolkit-cli-0.23.1
+                    
+          pwd
+          ls
+
+          toolkit provision apply
