--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,5 +44,5 @@ jobs:
                     
           pwd
           ls
-
+          toolkit provision init --metadata
           toolkit provision apply
