--- a/stack/groups/user.yaml
+++ b/stack/groups/user.yaml
@@ -18,7 +18,7 @@ entries:
     email: testuser3@phdata.io
     password: "<REPLACE WITH PASSWORD>"
     must_change_password: true
-  - username: testuser3
-    email: testuser3@phdata.io
+  - username: omkarinqa
+    email: omkarinqa@phdata.io
     password: "<REPLACE WITH PASSWORD>"
     must_change_password: true
